--- a/src/static/style.css
+++ b/src/static/style.css
@@ -88,9 +88,9 @@ body {
 header {
   background-color: #2b2b2b;
   color: white;
-  padding: 10px;
-  font-size: 24px;
-  text-align: center;
+  padding: 20px;
+  font-size: 26px;
+  font-weight: bold;
 }
 
 .menu-button {
