--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -18,22 +18,22 @@
     <li>
       <span>EPAC</span>
       <ul>
-        <li><a href="/menu/EPAC/qcm">QCM</a></li>
-        <li><a href="/menu/EPAC/open">OPEN</a></li>
+        <li><a href="/menu/epac/qcm">QCM</a></li>
+        <li><a href="/menu/epac/open">OPEN</a></li>
       </ul>
     </li>
     <li>
       <span>Pre-Exam</span>
       <ul>
-        <li><a href="/menu/Pre-Exam/qcm">QCM</a></li>
-        <li><a href="/menu/Pre-Exam/open">OPEN</a></li>
+        <li><a href="/menu/pre-exam/qcm">QCM</a></li>
+        <li><a href="/menu/pre-exam/open">OPEN</a></li>
       </ul>
     </li>
     <li>
       <span>Paper D</span>
       <ul>
-        <li><a href="/menu/Paper D/qcm">QCM</a></li>
-        <li><a href="/menu/Paper D/open">OPEN</a></li>
+        <li><a href="/menu/paper-d/qcm">QCM</a></li>
+        <li><a href="/menu/paper-d/open">OPEN</a></li>
       </ul>
     </li>
   </ul>
